add google analytics tag and seo improvements

--- a/about.html
+++ b/about.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About - Sophia Bartolacci</title>
+    <title>About Sophia Bartolacci - Computer Science Student & Developer</title>
+    <meta name="description" content="Learn about Sophia Bartolacci, a Computer Science student at Drexel University with concentrations in AI and UI/UX Design. Passionate about creating seamless digital experiences." />
+    <meta name="keywords" content="About Sophia Bartolacci, Computer Science Student, Drexel University, AI, UI/UX Design, Photography, Software Development" />
+    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
