--- a/blueboard.html
+++ b/blueboard.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
+    <title>Blueboard - Online Learning Platform | Sophia Bartolacci</title>
+    <meta name="description" content="Blueboard: An interactive online learning platform built with Node.js, PostgreSQL, and deployed on Fly.io. Features quiz creation, course management, and student interaction by Sophia Bartolacci." />
+    <meta name="keywords" content="Blueboard, Online Learning Platform, Node.js, PostgreSQL, Fly.io, Web Development, Sophia Bartolacci, Student Project, Quiz Platform" />
+    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
