--- a/due-date-demon.html
+++ b/due-date-demon.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Due Date Demon</title>
+    <title>Due Date Demon - AWS Lambda Discord Bot | Sophia Bartolacci</title>
+    <meta name="description" content="Due Date Demon: A serverless Discord bot built with AWS Lambda, Python, and Notion API that automatically sends assignment deadline reminders. View the project by Sophia Bartolacci." />
+    <meta name="keywords" content="Due Date Demon, AWS Lambda, Discord Bot, Python, Notion API, Serverless, Sophia Bartolacci, Automation, Student Project" />
+    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
