--- a/index.html
+++ b/index.html
@@ -4,8 +4,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
+    <title>
+      Sophia Bartolacci - Computer Science Student & Developer Portfolio
+    </title>
+    <meta
+      name="description"
+      content="Computer Science student at Drexel University specializing in AI, UI/UX design, and full-stack development. View my projects including AWS Lambda applications, web development, and UX research."
+    />
+    <meta
+      name="keywords"
+      content="Sophia Bartolacci, Computer Science, Drexel University, Software Developer, AI, UI/UX Design, AWS, Python, JavaScript, Portfolio"
+    />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Sophia Bartolacci",
+        "jobTitle": "Computer Science Student",
+        "affiliation": {
+          "@type": "Organization",
+          "name": "Drexel University"
+        },
+        "description": "Computer Science student specializing in Artificial Intelligence, UI/UX Design, and Data Science",
+        "url": "https://sophiabartolacci.github.io/",
+        "sameAs": [
+          "https://github.com/sophiabartolacci",
+          "https://www.linkedin.com/in/sophiabartolacci/",
+          "https://www.figma.com/@0f6bc5a7_6271_4"
+        ],
+        "email": "slb522@drexel.edu",
+        "knowsAbout": [
+          "Python",
+          "JavaScript",
+          "AWS",
+          "UI/UX Design",
+          "Artificial Intelligence",
+          "Data Science",
+          "Web Development"
+        ]
+      }
+    </script>
+
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
