--- a/photos.html
+++ b/photos.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sophia Bartolacci</title>
+    <title>Photography Portfolio - Sophia Bartolacci</title>
+    <meta name="description" content="Explore Sophia Bartolacci's photography portfolio featuring portraits, places, and Drexel Electric Racing photos. Creative photography showcasing diverse subjects and locations." />
+    <meta name="keywords" content="Sophia Bartolacci Photography, Portrait Photography, Travel Photography, Drexel Electric Racing, Creative Photography" />
+    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
