--- a/places.html
+++ b/places.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Places</title>
+    <title>Places Photography - Sophia Bartolacci</title>
+    <meta name="description" content="Explore Sophia Bartolacci's travel photography featuring beautiful places from around the world including Florida, Arizona, Jamaica, and Philadelphia landmarks." />
+    <meta name="keywords" content="Sophia Bartolacci Photography, Travel Photography, Places, Florida, Arizona, Jamaica, Philadelphia, Grand Canyon, Yosemite" />
+    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
