--- a/resume.html
+++ b/resume.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume</title>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
+    <title>Sophia Bartolacci Resume - Software Engineer & Computer Science Student</title>
+    <meta name="description" content="View Sophia Bartolacci's resume featuring experience as Software Engineer at REsurety Inc., Jr Database Developer at Webstaurantstore, and Computer Science education at Drexel University." />
+    <meta name="keywords" content="Sophia Bartolacci Resume, Software Engineer, Computer Science, AWS, Python, JavaScript, Drexel University, REsurety, Webstaurantstore" />
+    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+    
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
