--- a/humble-bundle.html
+++ b/humble-bundle.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Humble Bundle Redesign</title>
+    <title>Humble Bundle Website Redesign - UX Case Study | Sophia Bartolacci</title>
+    <meta name="description" content="Humble Bundle website redesign case study by Sophia Bartolacci. UX research, user testing, and Figma design improving navigation, filtering, and user experience through heuristic evaluation." />
+    <meta name="keywords" content="Humble Bundle Redesign, UX Design, User Research, Figma, Card Sorting, Heuristic Evaluation, Sophia Bartolacci, UI/UX Case Study, Website Redesign" />
+    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
