--- a/sae.html
+++ b/sae.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drexel Electric Racing</title>
+    <title>Drexel Electric Racing Photography - Sophia Bartolacci</title>
+    <meta name="description" content="Photography of Drexel Electric Racing Club by Sophia Bartolacci, showcasing the team building their electric Formula SAE race car and engineering work." />
+    <meta name="keywords" content="Sophia Bartolacci Photography, Drexel Electric Racing, Formula SAE, Electric Car, Engineering Photography, Drexel University" />
+    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R3JCTGHT3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7R3JCTGHT3');
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
